[gd_scene load_steps=23 format=3 uid="uid://cefxhem88bimp"]

[ext_resource type="Script" path="res://EditorsMenu/editors_menu.gd" id="1_j3u4m"]
[ext_resource type="Texture2D" uid="uid://n1uwflsiyvgk" path="res://EditorsMenu/FiguresEditor/FiguresEditorButton.png" id="2_opmee"]
[ext_resource type="Texture2D" uid="uid://b4aoll5wropy4" path="res://EditorsMenu/FiguresEditor/FiguresEditorButtonPressed.png" id="3_bm8co"]
[ext_resource type="Texture2D" uid="uid://wricyuwyc3nh" path="res://EditorsMenu/BarlinesEditor/BarlineButtons.png" id="4_bkg2g"]
[ext_resource type="Texture2D" uid="uid://g44l3tv6c4jv" path="res://EditorsMenu/DynamicsEditor/DynamicsButtons.png" id="5_pabfv"]
[ext_resource type="Texture2D" uid="uid://de7k0htv823il" path="res://EditorsMenu/FiguresEditor/QuarterButton.png" id="7_2mwtn"]
[ext_resource type="Texture2D" uid="uid://celjarqetingn" path="res://EditorsMenu/SectionsEditor/SectionsEditorButtons.png" id="7_tps5j"]
[ext_resource type="Texture2D" uid="uid://cx88rxsfy0n4j" path="res://EditorsMenu/OrffEditor/OrffEditorButtons.png" id="7_unpba"]
[ext_resource type="Texture2D" uid="uid://epauhq7srm57" path="res://EditorsMenu/FiguresEditor/QuarterButtonPressed.png" id="8_bhj7a"]
[ext_resource type="PackedScene" uid="uid://cvax6006mob8e" path="res://EditorsMenu/FiguresEditor/figures_editor.tscn" id="9_8vgqm"]
[ext_resource type="PackedScene" uid="uid://bp0tvlyaby78q" path="res://EditorsMenu/DynamicsEditor/dynamics_editor.tscn" id="9_i4fko"]
[ext_resource type="PackedScene" uid="uid://b0nbvvie4kie8" path="res://EditorsMenu/BarlinesEditor/barlines_editor.tscn" id="10_eo6jj"]
[ext_resource type="PackedScene" uid="uid://vtvhqdhcax4y" path="res://EditorsMenu/SectionsEditor/sections_editor.tscn" id="12_1oqga"]
[ext_resource type="PackedScene" uid="uid://b1aapw53syc23" path="res://EditorsMenu/OrffEditor/orff_editor.tscn" id="15_eehty"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ouqu"]
atlas = ExtResource("4_bkg2g")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wmc2"]
atlas = ExtResource("4_bkg2g")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_osrvf"]
atlas = ExtResource("5_pabfv")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx0yw"]
atlas = ExtResource("5_pabfv")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwjxr"]
atlas = ExtResource("7_unpba")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ahb1"]
atlas = ExtResource("7_unpba")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6o67"]
atlas = ExtResource("7_tps5j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctunx"]
atlas = ExtResource("7_tps5j")
region = Rect2(0, 64, 64, 64)

[node name="EditorsMenu" type="PanelContainer" groups=["loader", "saver"]]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_j3u4m")

[node name="Panel" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2

[node name="EditorOptionsContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="FiguresEditorButton" type="TextureButton" parent="EditorOptionsContainer"]
layout_mode = 2
texture_normal = ExtResource("2_opmee")
texture_pressed = ExtResource("3_bm8co")

[node name="BarlinesEditorButton" type="TextureButton" parent="EditorOptionsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_5ouqu")
texture_pressed = SubResource("AtlasTexture_1wmc2")

[node name="DynamicsEditorButton" type="TextureButton" parent="EditorOptionsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_osrvf")
texture_pressed = SubResource("AtlasTexture_vx0yw")

[node name="OrffEditorButton" type="TextureButton" parent="EditorOptionsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_uwjxr")
texture_pressed = SubResource("AtlasTexture_6ahb1")

[node name="SectionsEditorButton" type="TextureButton" parent="EditorOptionsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_d6o67")
texture_pressed = SubResource("AtlasTexture_ctunx")

[node name="ActiveEditor" type="HBoxContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="ActiveEditorButton" type="TextureButton" parent="ActiveEditor"]
self_modulate = Color(1, 0, 1, 1)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_2mwtn")
texture_pressed = ExtResource("8_bhj7a")

[node name="PanelContainer" type="PanelContainer" parent="ActiveEditor"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="FiguresEditor" parent="ActiveEditor/PanelContainer" instance=ExtResource("9_8vgqm")]
visible = false
layout_mode = 2

[node name="BarlinesEditor" parent="ActiveEditor/PanelContainer" instance=ExtResource("10_eo6jj")]
visible = false
layout_mode = 2

[node name="DynamicsEditor" parent="ActiveEditor/PanelContainer" instance=ExtResource("9_i4fko")]
visible = false
layout_mode = 2

[node name="OrffEditor" parent="ActiveEditor/PanelContainer" instance=ExtResource("15_eehty")]
visible = false
layout_mode = 2

[node name="SectionsEditor" parent="ActiveEditor/PanelContainer" instance=ExtResource("12_1oqga")]
visible = false
layout_mode = 2

[connection signal="pressed" from="EditorOptionsContainer/FiguresEditorButton" to="." method="_on_editor_option_pressed" binds= [1]]
[connection signal="pressed" from="EditorOptionsContainer/BarlinesEditorButton" to="." method="_on_editor_option_pressed" binds= [2]]
[connection signal="pressed" from="EditorOptionsContainer/DynamicsEditorButton" to="." method="_on_editor_option_pressed" binds= [3]]
[connection signal="pressed" from="EditorOptionsContainer/OrffEditorButton" to="." method="_on_editor_option_pressed" binds= [4]]
[connection signal="pressed" from="EditorOptionsContainer/SectionsEditorButton" to="." method="_on_editor_option_pressed" binds= [5]]
[connection signal="pressed" from="ActiveEditor/ActiveEditorButton" to="." method="_on_active_editor_button_pressed"]
[connection signal="figure_chosen" from="ActiveEditor/PanelContainer/FiguresEditor" to="." method="_on_figures_editor_figure_chosen"]
[connection signal="option_chosen" from="ActiveEditor/PanelContainer/BarlinesEditor" to="." method="_on_barlines_editor_barline_chosen"]
[connection signal="option_chosen" from="ActiveEditor/PanelContainer/DynamicsEditor" to="." method="_on_editor_marker_chosen"]
[connection signal="option_chosen" from="ActiveEditor/PanelContainer/OrffEditor" to="." method="_on_editor_marker_chosen"]
[connection signal="option_chosen" from="ActiveEditor/PanelContainer/SectionsEditor" to="." method="_on_editor_marker_chosen"]
